==> avp-protocol/avp-tropic/hal/stm32/stm32u5xx/libtropic_port_stm32u5xx.c <==
/**
 * @file libtropic_port_stm32u5xx.c
 * @copyright Copyright (c) 2020-2026 Tropic Square s.r.o.
 * @brief Port for STM32U5xx series using native SPI HAL (and GPIO HAL for chip select).
 *
 * @license For the license see LICENSE.md in the root directory of this source tree.
 */

#include "libtropic_port_stm32u5xx.h"

#include <stdarg.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>

#include "libtropic_common.h"
#include "libtropic_logging.h"
#include "libtropic_macros.h"
#include "libtropic_port.h"
#include "libtropic_secure_memzero.h"
#include "stm32u5xx_hal.h"

#define LT_STM32U5XX_GPIO_OUTPUT_CHECK_ATTEMPTS 10

lt_ret_t lt_port_random_bytes(lt_l2_state_t *s2, void *buff, size_t count)
{
    lt_dev_stm32u5xx_t *device = (lt_dev_stm32u5xx_t *)(s2->device);
    size_t bytes_left = count;
    uint8_t *buff_ptr = buff;
    int ret;
    uint32_t random_data;

    while (bytes_left) {
        ret = HAL_RNG_GenerateRandomNumber(device->rng_handle, &random_data);
        if (ret != HAL_OK) {
            LT_LOG_ERROR("HAL_RNG_GenerateRandomNumber failed, ret=%d", ret);
            lt_secure_memzero(&random_data, sizeof(random_data));
            return LT_FAIL;
        }

        size_t cpy_cnt = bytes_left < sizeof(random_data) ? bytes_left : sizeof(random_data);
        memcpy(buff_ptr, &random_data, cpy_cnt);
        bytes_left -= cpy_cnt;
        buff_ptr += cpy_cnt;
    }

    lt_secure_memzero(&random_data, sizeof(random_data));
    return LT_OK;
}

lt_ret_t lt_port_spi_csn_low(lt_l2_state_t *s2)
{
    lt_dev_stm32u5xx_t *device = (lt_dev_stm32u5xx_t *)(s2->device);

    HAL_GPIO_WritePin(device->spi_cs_gpio_bank, device->spi_cs_gpio_pin, GPIO_PIN_RESET);

    for (uint8_t read_attempts = 0; read_attempts < LT_STM32U5XX_GPIO_OUTPUT_CHECK_ATTEMPTS;
         read_attempts++) {
        if (!HAL_GPIO_ReadPin(device->spi_cs_gpio_bank, device->spi_cs_gpio_pin)) {
            return LT_OK;
        }
    }

    LT_LOG_ERROR("Failed to set CSN low!");
    return LT_L1_SPI_ERROR;
}

lt_ret_t lt_port_spi_csn_high(lt_l2_state_t *s2)
{
    lt_dev_stm32u5xx_t *device = (lt_dev_stm32u5xx_t *)(s2->device);

    HAL_GPIO_WritePin(device->spi_cs_gpio_bank, device->spi_cs_gpio_pin, GPIO_PIN_SET);

    for (uint8_t read_attempts = 0; read_attempts < LT_STM32U5XX_GPIO_OUTPUT_CHECK_ATTEMPTS;
         read_attempts++) {
        if (HAL_GPIO_ReadPin(device->spi_cs_gpio_bank, device->spi_cs_gpio_pin)) {
            return LT_OK;
        }
    }

    LT_LOG_ERROR("Failed to set CSN high!");
    return LT_L1_SPI_ERROR;
}

lt_ret_t lt_port_init(lt_l2_state_t *s2)
{
    lt_dev_stm32u5xx_t *device = (lt_dev_stm32u5xx_t *)(s2->device);
    HAL_StatusTypeDef ret;

    // Configure SPI.
    device->spi_handle.Instance = device->spi_instance;
    device->spi_handle.Init.Mode = SPI_MODE_MASTER;
    device->spi_handle.Init.Direction = SPI_DIRECTION_2LINES;
    device->spi_handle.Init.DataSize = SPI_DATASIZE_8BIT;
    device->spi_handle.Init.CLKPolarity = SPI_POLARITY_LOW;
    device->spi_handle.Init.CLKPhase = SPI_PHASE_1EDGE;
    device->spi_handle.Init.NSS = SPI_NSS_SOFT;
    device->spi_handle.Init.BaudRatePrescaler = device->baudrate_prescaler;
    device->spi_handle.Init.FirstBit = SPI_FIRSTBIT_MSB;
    device->spi_handle.Init.TIMode = SPI_TIMODE_DISABLE;
    device->spi_handle.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
    device->spi_handle.Init.CRCPolynomial = 0x7;
    device->spi_handle.Init.NSSPMode = SPI_NSS_PULSE_DISABLE;
    device->spi_handle.Init.NSSPolarity = SPI_NSS_POLARITY_LOW;
    device->spi_handle.Init.FifoThreshold = SPI_FIFO_THRESHOLD_01DATA;
    device->spi_handle.Init.MasterSSIdleness = SPI_MASTER_SS_IDLENESS_00CYCLE;
    device->spi_handle.Init.MasterInterDataIdleness = SPI_MASTER_INTERDATA_IDLENESS_00CYCLE;
    device->spi_handle.Init.MasterReceiverAutoSusp = SPI_MASTER_RX_AUTOSUSP_DISABLE;
    device->spi_handle.Init.MasterKeepIOState = SPI_MASTER_KEEP_IO_STATE_DISABLE;
    device->spi_handle.Init.IOSwap = SPI_IO_SWAP_DISABLE;
    device->spi_handle.Init.ReadyMasterManagement = SPI_RDY_MASTER_MANAGEMENT_INTERNALLY;
    device->spi_handle.Init.ReadyPolarity = SPI_RDY_POLARITY_HIGH;

    ret = HAL_SPI_Init(&device->spi_handle);
    if (ret != HAL_OK) {
        LT_LOG_ERROR("Failed to init SPI, ret=%d", ret);
        return LT_L1_SPI_ERROR;
    }

    SPI_AutonomousModeConfTypeDef HAL_SPI_AutonomousMode_Cfg_Struct = {
        .TriggerState = SPI_AUTO_MODE_DISABLE,
        .TriggerSelection = SPI_GRP1_GPDMA_CH0_TCF_TRG,
        .TriggerPolarity = SPI_TRIG_POLARITY_RISING};

    ret = HAL_SPIEx_SetConfigAutonomousMode(&device->spi_handle, &HAL_SPI_AutonomousMode_Cfg_Struct);
    if (ret != HAL_OK) {
        LT_LOG_ERROR("Failed to configure SPI autonomous mode, ret=%d", ret);
        HAL_SPI_DeInit(&device->spi_handle);
        return LT_L1_SPI_ERROR;
    }

    // Configure GPIO for chip select and set default value.
    GPIO_InitTypeDef GPIO_InitStruct = {0};
    HAL_GPIO_WritePin(device->spi_cs_gpio_bank, device->spi_cs_gpio_pin, GPIO_PIN_SET);
    GPIO_InitStruct.Pin = device->spi_cs_gpio_pin;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
    HAL_GPIO_Init(device->spi_cs_gpio_bank, &GPIO_InitStruct);

#if LT_USE_INT_PIN
    // Configure GPIO for INT pin.
    GPIO_InitStruct.Pin = device->int_gpio_pin;
    GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
    HAL_GPIO_Init(device->int_gpio_bank, &GPIO_InitStruct);
#endif

    return LT_OK;
}

lt_ret_t lt_port_deinit(lt_l2_state_t *s2)
{
    lt_dev_stm32u5xx_t *device = (lt_dev_stm32u5xx_t *)(s2->device);
    int ret;

    ret = HAL_SPI_DeInit(&device->spi_handle);
    if (ret != HAL_OK) {
        LT_LOG_ERROR("Failed to deinit SPI, ret=%d", ret);
        return LT_L1_SPI_ERROR;
    }

    return LT_OK;
}

lt_ret_t lt_port_spi_transfer(lt_l2_state_t *s2, uint8_t offset, uint16_t tx_data_length,
                              uint32_t timeout_ms)
{
    lt_dev_stm32u5xx_t *device = (lt_dev_stm32u5xx_t *)(s2->device);

    if (offset + tx_data_length > TR01_L1_LEN_MAX) {
        LT_LOG_ERROR("Invalid data length!");
        return LT_L1_DATA_LEN_ERROR;
    }
    int ret = HAL_SPI_TransmitReceive(&device->spi_handle, s2->buff + offset, s2->buff + offset,
                                      tx_data_length, timeout_ms);
    if (ret != HAL_OK) {
        LT_LOG_ERROR("HAL_SPI_TransmitReceive failed, ret=%d", ret);
        return LT_L1_SPI_ERROR;
    }

    return LT_OK;
}

lt_ret_t lt_port_delay(lt_l2_state_t *s2, uint32_t ms)
{
    LT_UNUSED(s2);

    HAL_Delay(ms);

    return LT_OK;
}

#if LT_USE_INT_PIN
lt_ret_t lt_port_delay_on_int(lt_l2_state_t *s2, uint32_t ms)
{
    lt_dev_stm32u5xx_t *device = (lt_dev_stm32u5xx_t *)(s2->device);
    uint32_t time_initial = HAL_GetTick();
    uint32_t time_actual;

    while ((HAL_GPIO_ReadPin(device->int_gpio_bank, device->int_gpio_pin) == 0)) {
        time_actual = HAL_GetTick();
        if ((time_actual - time_initial) > ms) {
            return LT_L1_INT_TIMEOUT;
        }
        // HAL_Delay(ms);
    }

    return LT_OK;
}
#endif

int lt_port_log(const char *format, ...)
{
    va_list args;
    int ret;

    va_start(args, format);
    ret = vprintf(format, args);
    fflush(stdout);
    va_end(args);

    return ret;
}
